# zotRm

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: advanced-usage.md
docs/dev/: spike-v6-render.py  storage-backends-plan.md
src/zotrm/: __init__.py  __main__.py  cli.py  config.py  cron.py  remarkable.py  render.py  storage.py  wizard.py  zotero.py
tests/: conftest.py  test_cli.py  test_config.py  test_cron.py  test_pull.py  test_push.py  test_render.py  test_storage.py  test_sync.py  test_walk.py  test_wizard.py  test_zotero.py
