[project]
name = "zotrm"
version = "0.1.0"
description = "Bridge a Zotero collection to a reMarkable Paper Pro: push PDFs, pull annotations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["zotero", "remarkable", "pdf", "annotations", "rmapi"]
authors = [{ name = "Shubhashis Roy Dipta" }]
dependencies = [
    "pyzotero>=1.5",
    "questionary>=2.0",
]

[project.scripts]
zotrm = "zotrm.cli:main"

[project.urls]
Homepage = "https://roydipta.com"
Repository = "https://github.com/dipta007/zotrm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotrm"]

[dependency-groups]
dev = ["mypy>=1.10", "pytest>=8.0", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pyzotero.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
