[project]
name = "zotrm"
version = "0.1.1"
description = "Bridge a Zotero collection to a reMarkable Paper Pro: push PDFs, pull annotations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["zotero", "remarkable", "pdf", "annotations", "rmapi"]
authors = [{ name = "Shubhashis Roy Dipta" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyzotero>=1.5",
    "questionary>=2.0",
]

[project.scripts]
zotrm = "zotrm.cli:main"

[project.urls]
Homepage = "https://roydipta.com"
Repository = "https://github.com/dipta007/zotRm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotrm"]

[dependency-groups]
dev = ["mypy>=1.10", "pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pyzotero.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=zotrm --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["zotrm"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
]
